--- a/config/overlays/dev/kustomization.yaml
+++ b/config/overlays/dev/kustomization.yaml
@@ -10,9 +10,9 @@ commonLabels:
 
 # replace the image tag of the container with latest
 images:
-- digest: sha256:ac61c247578acbe30d1348bbed9442d753eb70bb8533638719c50e78143baa0c
-  name: quay.io/wpernath/person-service:latest
-  newName: quay.io/wpernath/person-service:latest
+- digest: sha256:3857d83ab41bcd40dafac4214097d1619acb0d41d79c39d32fe14f7605beb379
+  name: quay.io/nam_nt/person-service:latest
+  newName: quay.io/namnt/person-service:v3
 
 # generate a configmap 
 configMapGenerator:
